fixed visability and some consolidations